feat: comms draft
